--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,12 +32,16 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'com.google.android.material:material:1.2.0'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.13'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
     //FireBase//
     implementation 'com.google.firebase:firebase-analytics:17.4.4'
+
+    //FireStore//
+    implementation 'com.firebaseui:firebase-ui-firestore:3.1.3'
 
     //FireBase UI//
     implementation 'com.firebaseui:firebase-ui-auth:6.2.0'
@@ -48,4 +52,9 @@ dependencies {
     //FaceBook Login/
     implementation 'com.facebook.android:facebook-android-sdk:7.1.0'
 
+    //Google Maps//
+    implementation 'com.google.android.gms:play-services-maps:17.0.0'
+
+    //Google Places//
+    implementation 'com.google.android.libraries.places:places:2.3.0'
 }
