Move to MVVM the initial project.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,6 +25,10 @@ android {
     buildFeatures {
         viewBinding = true
     }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
 }
 
 dependencies {
@@ -36,6 +40,7 @@ dependencies {
     testImplementation 'junit:junit:4.13'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
 
     //FireBase//
     implementation 'com.google.firebase:firebase-analytics:17.4.4'
@@ -57,4 +62,9 @@ dependencies {
 
     //Google Places//
     implementation 'com.google.android.libraries.places:places:2.3.0'
+
+    //Retrofit//
+    implementation 'com.squareup.retrofit2:retrofit:2.4.0'
+    implementation 'com.squareup.retrofit2:converter-moshi:2.4.0'
+
 }
