rework the package and start to implement place/details call

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Restaurant.DetailsRestaurant"></activity>
+        <activity android:name=".restaurant.RestaurantDetailActivity"></activity>
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
              (See the file "res/values/google_maps_api.xml").
@@ -35,8 +35,8 @@
             android:value="@string/google_api_key" />
 
         <activity android:name=".authentication.SignInActivity" />
-        <activity android:name=".activities.CoreActivity" />
-        <activity android:name=".activities.SplashActivity">
+        <activity android:name=".main.SplashActivity" />
+        <activity android:name=".main.CoreActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
