--- a/gradle.properties
+++ b/gradle.properties
@@ -17,3 +17,6 @@ org.gradle.jvmargs=-Xmx2048m
 android.useAndroidX=true
 # Automatically convert third-party libraries to use AndroidX
 android.enableJetifier=true
+#api place
+baseApi="https://maps.googleapis.com/maps/api/"
+placeApiKey="AIzaSyB3o6so9QZ4VMEXE96QQx1ctsWAe7nlIGk"
