--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,6 +20,12 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            buildConfigField ('String', "ApiPlaceBase", baseApi)
+            buildConfigField ('String', "ApiPlaceKey", placeApiKey)
+        }
+        debug {
+            buildConfigField ('String', "ApiPlaceBase", baseApi)
+            buildConfigField ('String', "ApiPlaceKey", placeApiKey)
         }
     }
     buildFeatures {
@@ -43,13 +49,13 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     implementation 'pub.devrel:easypermissions:3.0.0'
-
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
 
     //FireBase//
     implementation 'com.google.firebase:firebase-analytics:17.5.0'
 
     //FireStore//
-    implementation 'com.firebaseui:firebase-ui-firestore:3.1.3'
+    implementation 'com.firebaseui:firebase-ui-firestore:6.2.0'
 
     //FireBase UI//
     implementation 'com.firebaseui:firebase-ui-auth:6.2.0'
@@ -64,14 +70,15 @@ dependencies {
     implementation 'com.google.android.gms:play-services-maps:17.0.0'
 
     //Google Places//
-    implementation 'com.google.android.libraries.places:places:2.3.0'
+    implementation 'com.google.android.libraries.places:places:2.4.0'
 
     //Retrofit//
-    implementation 'com.squareup.retrofit2:retrofit:2.4.0'
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-moshi:2.4.0'
     implementation 'com.squareup.okhttp:okhttp:2.7.5'
-    implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
 
-    implementation 'com.github.bumptech.glide:glide:4.9.0'
-
+    //RxJava//
+    implementation 'io.reactivex.rxjava3:rxjava:3.0.6'
+    implementation 'io.reactivex.rxjava3:rxandroid:3.0.0'
 }
