--- a/app/build.gradle
+++ b/app/build.gradle
@@ -81,4 +81,6 @@ dependencies {
     //RxJava//
     implementation 'io.reactivex.rxjava3:rxjava:3.0.6'
     implementation 'io.reactivex.rxjava3:rxandroid:3.0.0'
+    implementation 'com.squareup.retrofit2:adapter-rxjava3:2.9.0'
+
 }
