--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,8 +66,12 @@ dependencies {
     //MultiDex//
     implementation 'com.android.support:multidex:1.0.3'
 
-    //FaceBook Login/
+    //FaceBook Login//
     implementation 'com.facebook.android:facebook-android-sdk:7.1.0'
+
+    // Twitter Login//
+    implementation 'com.twitter.sdk.android:twitter-core:3.3.0'
+    implementation 'com.twitter.sdk.android:twitter:3.0.0'
 
     //Google Maps//
     implementation 'com.google.android.gms:play-services-maps:17.0.0'
