--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,8 +25,8 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:replace="android:allowBackup">
-        <activity
-            android:name=".settings.SettingsActivity"/>
+        <activity android:name=".authentication.SignInMailActivity"></activity>
+        <activity android:name=".settings.SettingsActivity" />
         <activity android:name=".details.RestaurantDetailActivity" />
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
@@ -41,8 +41,7 @@
             android:value="@string/google_api_key" />
 
         <activity android:name=".authentication.SignInActivity" />
-        <activity android:name=".main.CoreActivity"
-            />
+        <activity android:name=".main.CoreActivity" />
         <activity
             android:name=".main.SplashActivity"
             android:theme="@style/AppTheme.NoActionBar">
@@ -81,8 +80,8 @@
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
             </intent-filter>
         </receiver>
-
-        <receiver android:name=".notification.NotificationEraser"
+        <receiver
+            android:name=".notification.NotificationEraser"
             android:enabled="false">
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
