--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,10 +22,14 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
             buildConfigField('String', "ApiPlaceBase", baseApi)
             buildConfigField('String', "ApiPlaceKey", placeApiKey)
+            buildConfigField('String', "twitter_consumer_key", twitter_consumer_key)
+            buildConfigField('String', "twitter_consumer_secret", twitter_consumer_secret)
         }
         debug {
             buildConfigField('String', "ApiPlaceBase", baseApi)
             buildConfigField('String', "ApiPlaceKey", placeApiKey)
+            buildConfigField('String', "twitter_consumer_key", twitter_consumer_key)
+            buildConfigField('String', "twitter_consumer_secret", twitter_consumer_secret)
         }
     }
     buildFeatures {
@@ -43,16 +47,23 @@ dependencies {
     implementation 'com.google.android.material:material:1.2.1'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
-    testImplementation 'junit:junit:4.13.1'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     implementation 'pub.devrel:easypermissions:3.0.0'
     implementation 'com.github.bumptech.glide:glide:4.11.0'
 
+    //Test//
+    androidTestImplementation "androidx.arch.core:core-testing:2.1.0"
+    testImplementation 'junit:junit:4.13.1'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
+    androidTestImplementation 'androidx.test:rules:1.3.0'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    androidTestImplementation 'com.android.support.test.espresso:espresso-contrib:3.0.2'
+    testImplementation 'org.mockito:mockito-core:2.20.0'
+
+
     //FireBase//
-    implementation 'com.google.firebase:firebase-analytics:18.0.0'
-    implementation 'com.google.firebase:firebase-core:18.0.0'
+    implementation 'com.google.firebase:firebase-analytics:18.0.1'
+    implementation 'com.google.firebase:firebase-core:18.0.1'
 
     //FireBase Storage//
     implementation 'com.google.firebase:firebase-storage:19.2.1'
