--- a/gradle.properties
+++ b/gradle.properties
@@ -19,4 +19,6 @@ android.useAndroidX=true
 android.enableJetifier=true
 #api place
 baseApi="https://maps.googleapis.com/maps/api/"
-placeApiKey="AIzaSyCU1lFsPXWRYFbAlkanvFlDVWW5GIqmdqA"
+placeApiKey="AIzaSyD5XDj254xRLA2aOGqGgKg9ubPrJX1d3fw"
+twitter_consumer_key="ZQxLdmoa47QREqlzDCBxUOiRI"
+twitter_consumer_secret="pzsWKcA4A8csSTE0GmyJvvtfUqqpIDnwnjU03Lcp5hDRDMbWz1"
